[package]
name = "hpke-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# --- Shared --- #

# Used by the library plumbing (src/) and every example. `bwc_basic` needs
# nothing beyond these.
anyhow = "1"
getrandom = "0.3"
hpke = { version = "0.13", default-features = false, features = [
    "alloc",
    "x25519",
] }
# Zero-dep hex codec (swap for any other); used by the connection string.
lexe-hex = "0.1"

# --- bwc_full --- #

# Served deployment: an axum relay + reqwest clients, with JSON wire types.
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
# Swappable Lexe utilities (published, MIT, minor helpers any impl could replace):
lexe-serde = "0.1" # hex-encoded bytes in JSON (a serde `with` module)
lexe-tokio = "0.1" # LxTask (named task spawn) + NotifyOnce (graceful shutdown)

# --- bwc_post_quantum_upgrade --- #

# v2 post-quantum suite: X-Wing (X25519 + ML-KEM-768) KEM + HKDF-SHA256 +
# ChaCha20Poly1305. X-Wing isn't an HPKE KEM, so the tiny KEM→KDF→AEAD schedule
# is built by hand there. `sha2` is also used by secp256k1_signing.
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
# x-wing pinned (pre-1.0 RC, API may shift); getrandom feature = no-RNG keygen.
x-wing = { version = "=0.1.0-rc.0", features = ["getrandom"] }

# --- ed25519_signing --- #

ring = "0.17" # ed25519 signatures

# --- secp256k1_signing --- #

# secp256k1 keys & ECDSA; the ECDSA transcript is hashed with `sha2` (above).
secp256k1 = "0.31" # also used by secp256k1_authmode

# --- secp256k1_authmode --- #

# Alternative, not recommended: secp256k1 as a non-standard HPKE KEM via a fork
# of rust-hpke (RFC 9180 defines only the NIST P-curves + X25519/X448). Prefer a
# signing variant. Renamed to coexist with the standard `hpke` crate.
hpke-secp = { git = "https://github.com/Aphoh/rust-hpke-secp", rev = "13fffdc45ec6eeb785dca340cc625257911c0cef", package = "hpke", default-features = false, features = ["k256"] }

# Alternatives to the recommended `bwc_basic` baseline; see the README.
# Nested under examples/alt/, so they need explicit paths to stay runnable as
# `cargo run --example <name>`.
[[example]]
name = "secp256k1_authmode"
path = "examples/alt/secp256k1_authmode.rs"

[[example]]
name = "ed25519_signing"
path = "examples/alt/ed25519_signing.rs"

[[example]]
name = "secp256k1_signing"
path = "examples/alt/secp256k1_signing.rs"
